Upgraded to Astro 3.0

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -23,7 +23,7 @@ const socialCount = SOCIALS.filter(social => social.active).length;
   <Header />
   <main id="main-content">
     <section id="hero">
-      <h1>Kalmanodds</h1>
+      <h1>kalmanodds</h1>
 
       <p>
         I am a software engineer from Iceland, specializing in payment
