--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -2,10 +2,10 @@
 import { type CollectionEntry, getCollection } from "astro:content";
 import Posts from "@layouts/Posts.astro";
 import PostDetails from "@layouts/PostDetails.astro";
-import getSortedPosts from "@utils/getSortedPosts";
 import getPageNumbers from "@utils/getPageNumbers";
-import slugify from "@utils/slugify";
+import { slugifyPost } from "@utils/slugify";
 import { SITE } from "@config";
+import { sortPostsByDate } from "@utils/sortByDate";
 
 export interface Props {
   post: CollectionEntry<"blog">;
@@ -15,7 +15,7 @@ export async function getStaticPaths() {
   const posts = await getCollection("blog", ({ data }) => !data.draft);
 
   const postResult = posts.map(post => ({
-    params: { slug: slugify(post.data) },
+    params: { slug: slugifyPost(post.data) },
     props: { post },
   }));
 
@@ -31,8 +31,7 @@ const { post } = Astro.props;
 
 const posts = await getCollection("blog");
 
-const sortedPosts = getSortedPosts(posts);
-
+const sortedPosts = sortPostsByDate(posts);
 const totalPages = getPageNumbers(sortedPosts.length);
 
 const currentPage =
@@ -51,7 +50,7 @@ const paginatedPosts = sortedPosts.slice(startPost, lastPost);
   ) : (
     <Posts
       posts={paginatedPosts}
-      pageNum={currentPage}
+      pageNumber={currentPage}
       totalPages={totalPages.length}
     />
   )
