--- a/src/pages/tags/index.astro
+++ b/src/pages/tags/index.astro
@@ -16,7 +16,7 @@ let tags = getUniqueTags([...posts, ...projects]);
 
 <Layout title={`Tags | ${SITE.title}`}>
   <Header activeNav="tags" />
-  <Main pageTitle="Tags" pageDesc="All the tags used in posts.">
+  <Main pageTitle="Tags" pageDesc="All the tags used in projects and posts.">
     <ul>
       {tags.map(tag => <Tag name={tag} size="lg" />)}
     </ul>
