--- a/src/layouts/Projects.astro
+++ b/src/layouts/Projects.astro
@@ -22,7 +22,7 @@ const next = pageNumber < totalPages ? "" : "disabled";
 
 <Layout title={`Portfolio | ${SITE.title}`}>
   <Header activeNav="projects" />
-  <Main pageTitle='Portfolio' pageDesc='Featured projects.'>
+  <Main pageTitle='Projects' pageDesc='Featured projects.'>
     
     <ul>
       {
