--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -2,7 +2,7 @@
 import Projects from "@layouts/Projects.astro";
 import { getCollection } from "astro:content";
 
-const projects = await getCollection("portfolio");
+const projects = await getCollection("portfolio", ({ data }) => !data.draft);
 ---
 
 <Projects projects={projects} pageNumber={1} totalPages={projects.length} />
