github link for project

--- a/src/layouts/ProjectDetails.astro
+++ b/src/layouts/ProjectDetails.astro
@@ -51,6 +51,8 @@ const readmeContent = marked.parse(readmeMarkdown);
     <Datetime datetime={publishedAt} size="lg" className="my-2" postTitle={title} />
     <article id="article" role="article" class="prose mx-auto mt-8 max-w-3xl">
       <Content />
+      <p>See more on <a target="_blank" href={url}>Github</a>.</p>
+      <strong>README.md:</strong>
       <Fragment set:html={readmeContent} />
     </article>
 
