--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -11,6 +11,9 @@
     --color-card: 52, 63, 96;
     --color-card-muted: 138, 51, 2;
     --color-border: 171, 130, 8;
+    --color-tag-typescript: 49, 120, 198;
+    --color-tag-astro: 255, 86, 6;
+    --color-tag-tailwindcss: 22, 190, 203;
   }
   body {
     @apply flex min-h-screen flex-col bg-skin-fill font-mono text-skin-base 
