--- a/src/layouts/Main.astro
+++ b/src/layouts/Main.astro
@@ -1,18 +1,23 @@
 ---
 import Breadcrumbs from "@components/Breadcrumbs.astro";
+import Tag from "@components/Tag.astro";
 
 export interface Props {
   pageTitle: string;
   pageDesc?: string;
+  trailingTag?: string
 }
 
-const { pageTitle, pageDesc } = Astro.props;
+const { pageTitle, pageDesc, trailingTag } = Astro.props;
 ---
 
 <Breadcrumbs />
 <main id="main-content">
   <h1>{pageTitle}</h1>
-  <p>{pageDesc}</p>
+  <p>
+    {pageDesc}
+    {trailingTag && <Tag class="hover:bg-opacity-50" name={trailingTag} />}
+  </p>
   <slot />
 </main>
 
