--- a/src/components/Datetime.astro
+++ b/src/components/Datetime.astro
@@ -1,14 +1,17 @@
 ---
 import { LOCALE } from "@config";
+import { FaNewspaper, FaCode } from "react-icons/fa6";
+import IconShell from "../components/IconShell.astro"
 
 export interface Props {
   datetime: string | Date;
   postTitle: string | undefined;
+  type: string;
   size?: "sm" | "lg";
   className?: string;
 }
 
-const { datetime, postTitle, size = "sm", className } = Astro.props;
+const { datetime, postTitle, size = "sm", className, type } = Astro.props;
 
 const myDatetime = new Date(datetime);
 
@@ -17,26 +20,14 @@ const date = myDatetime.toLocaleDateString(LOCALE, {
   month: "long",
   day: "numeric",
 });
+const icon = type === "project" ? FaCode : FaNewspaper;
 ---
 
 <div
   class={`flex items-center space-x-2 opacity-80 ${className}`}
   transition:name={`date-${postTitle}`}
 >
-  <svg
-    xmlns="http://www.w3.org/2000/svg"
-    class={`${
-      size === "sm" ? "scale-90" : "scale-100"
-    } inline-block h-6 w-6 fill-skin-base`}
-    aria-hidden="true"
-  >
-    <path
-      d="M7 11h2v2H7zm0 4h2v2H7zm4-4h2v2h-2zm0 4h2v2h-2zm4-4h2v2h-2zm0 4h2v2h-2z"
-    ></path>
-    <path
-      d="M5 22h14c1.103 0 2-.897 2-2V6c0-1.103-.897-2-2-2h-2V2h-2v2H9V2H7v2H5c-1.103 0-2 .897-2 2v14c0 1.103.897 2 2 2zM19 8l.001 12H5V8h14z"
-    ></path>
-  </svg>
+  <IconShell icon={icon} size={size} />
   <span class="sr-only">Posted on:</span>
   <span class={`italic ${size === "sm" ? "text-sm" : "text-base"}`}>
     {date}
