--- a/src/layouts/ProjectDetails.astro
+++ b/src/layouts/ProjectDetails.astro
@@ -48,7 +48,7 @@ const readmeContent = marked.parse(readmeMarkdown);
   </div>
   <main id="main-content">
     <h1 class="project-title" transition:name={title}>{title}</h1>
-    <Datetime datetime={publishedAt} size="lg" className="my-2" postTitle={title} />
+    <Datetime datetime={publishedAt} type="project" size="lg" className="my-2" postTitle={title} />
     
     <ul class="mt-4 mb-8">
       {tags.map(tag => <li class="inline"><Tag name={slugifyStr(tag)} /></li>)}
